# prunepytest

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  runtests.sh
.github/: FUNDING.yml
.github/workflows/: CI.yml  coverage.yml  impact.yml
cmd/: Cargo.toml
cmd/src/: main.rs
common/: Cargo.toml
common/benches/: matcher.rs
common/src/: graph.rs  lib.rs  matcher.rs  moduleref.rs  parser.rs  transitive_closure.rs
pyext/: Cargo.toml  pyproject.toml  requirements-3.7.txt  requirements-dev.in  requirements-dev.txt  runtests.sh
pyext/python/: pytest.ini  ruff.toml
pyext/python/src/prunepytest/: __init__.pyi  __main__.py  _prunepytest.pyi  api.py  args.py  defaults.py  graph.py  plugin.py  tracker.py  util.py  validator.py
pyext/python/src/prunepytest/pytest/: plugin.py  selector.py  util.py  validator.py
pyext/python/src/prunepytest/vcs/: git.py
pyext/python/src/testfully/: __init__.py  __init__.pyi  api.py  plugin.py  tracker.py  util.py  validator.py
pyext/python/src/testfully/vcs/: __init__.py  detect.py  git.py
pyext/python/test-data/: ruff.toml
pyext/python/test-data/cycles/: a_to_b.py  b_to_c.py  c_to_a.py
pyext/python/test-data/cycles/foo/bar/: __init__.py
pyext/python/test-data/cycles/foo/bar/baz/: __init__.py
pyext/python/test-data/dynamic/: bar.py  baz.py  by_caller.py  foo.py  indirect.py
pyext/python/test-data/dynamic/all_qux/: __init__.py
pyext/python/test-data/dynamic/all_qux2/: __init__.py
pyext/python/test-data/dynamic/anchored/: a.py  b.py  c.py
pyext/python/test-data/dynamic/qux/: bar.py  baz.py  foo.py  noop.py
pyext/python/test-data/foo/: bar.py  baz.py
pyext/python/test-data/foo/foo/: qux.py
pyext/python/test-data/reexport/: __init__.py
pyext/python/test-data/repeated/: one.py  same.py  three.py  two.py
pyext/python/test-data/simple/: bar.py  baz.py
pyext/python/test-data/simple/foo/: qux.py
pyext/python/test-data/unresolved/: __init__.py
pyext/python/tests/prunepytest/: conftest.py  test_defaults.py  test_graph.py  test_plugin_select.py  test_plugin_validate.py  test_tracker.py  test_util.py  test_validator.py  tracker_helper.py
pyext/python/tests/testfully/: conftest.py  test_plugin.py  test_plugin_select.py  test_plugin_validate.py  test_tracker.py  test_util.py  test_validator.py  tracker_helper.py
pyext/src/: lib.rs
pyext/testfully/: plugin.py  tracker.py  util.py  validator.py
