[package]
name = "cmd"
version = "0.5.0"
edition = "2021"

[dependencies]
common = { workspace = true }
pyo3 = { workspace = true }
ignore = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
ustr = { workspace = true }
speedy = { workspace = true }
