[package]
name = "cmd"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { workspace = true }
ignore = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
ustr = { workspace = true }
speedy = { workspace = true }
