[package]
name = "pyext"
version = { workspace = true }
publish = false
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[lib]
name = "prunepytest"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {  version = "0.23.3", features = ["abi3-py37", "anyhow", "extension-module"] }
common = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
ustr = { workspace = true }
