[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "testfully"
description = "only test relevant files"
requires-python = ">=3.7"
authors = [
    { name="Hugues Bruant", email="hugues@betakappaphi.com" },
]
readme = "../README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",

]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/huguesb/testfully"
Respository = "https://github.com/huguesb/testfully.git"
Issues = "https://github.com/huguesb/testfully/issues"

[project.entry-points.pytest11]
testfully = "testfully.plugin"

[tool.maturin]
python-source = "python/src"
module-name = "testfully._testfully"
# Control the platform tag on linux
compatibility = "manylinux2014"
# auditwheel mode, possible values are repair, check and skip
auditwheel = "repair"
features = ["pyo3/abi3-py37", "pyo3/extension-module"]

[tool.ruff]
line-length = 100
